--- a/index.html
+++ b/index.html
@@ -2,7 +2,25 @@
 <html>
     <head>
         <body>
-
+        <section>
+        <h3>Places I've Been:</h3>
+        <ul>
+            <li>San Diego</li> 
+            <li>Colorado Springs</li> 
+            <li>Denver</li> 
+            <li>Los Angeles</li> 
+            <li>Seattle</li>   
+        </ul>
+        </section>
+        <section>
+            <h3>Places To Go:</h3>
+        <ol>
+            <li>New York</li>
+            <li>Boston</li>
+            <li>Miami</li>
+        </ol>
+        </section>
         </body>
     </head>
 </html>
+
